Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.0.0
-
None
-
ca4076c839e23ff871c3376749becb2ff7392ebf
Description
Can't re-produce. I've just edited some header/source file.
ASAN:SIGSEGV ================================================================= ==27517==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000048 (pc 0x7fa2244fa293 bp 0x7fa20739acd0 sp 0x7fa20739aac0 T796) #0 0x7fa2244fa292 in QList<CPlusPlus::Document::MacroUse>::QList(QList<CPlusPlus::Document::MacroUse> const&) /home/nik/usr/qt-5.6.0-install/5.6/gcc_64/include/QtCore/qlist.h:797:36 #1 0x7fa2244f3348 in CPlusPlus::Document::macroUses() const /home/nik/dev/creator/creator-ut/src/libs/cplusplus/CppDocument.h:339:7 #2 0x7fa2244ae8da in Autotest::Internal::testClass(CppTools::CppModelManager const*, QString const&) /home/nik/dev/creator/creator-ut/src/plugins/autotest/testcodeparser.cpp:291:57 #3 0x7fa2244a6138 in Autotest::Internal::checkDocumentForTestCode(QFutureInterface<Autotest::Internal::TestParseResult>, QSharedPointer<CPlusPlus::Document>, QHash<QString, QString>) /home/nik/dev/creator/creator-ut/src/plugins/autotest/testcodeparser.cpp:530:30 #4 0x7fa2244a0fef in Autotest::Internal::performParse(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>) /home/nik/dev/creator/creator-ut/src/plugins/autotest/testcodeparser.cpp:593:13 #5 0x7fa2244d36d0 in void Utils::Internal::runAsyncQFutureInterfaceDispatch<Autotest::Internal::TestParseResult, void (*)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList, QHash<QString, QString> >(std::integral_constant<bool, true>, QFutureInterface<Autotest::Internal::TestParseResult>, void (*&&)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList&&, QHash<QString, QString>&&) /home/nik/dev/creator/creator-ut/src/libs/utils/runextensions.h:253:5 #6 0x7fa2244d322f in void Utils::Internal::runAsyncArityDispatch<Autotest::Internal::TestParseResult, void (*)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList, QHash<QString, QString> >(std::integral_constant<bool, true>, QFutureInterface<Autotest::Internal::TestParseResult>, void (*&&)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList&&, QHash<QString, QString>&&) /home/nik/dev/creator/creator-ut/src/libs/utils/runextensions.h:268:5 #7 0x7fa2244d2a79 in void Utils::Internal::runAsyncMemberDispatch<Autotest::Internal::TestParseResult, void (*)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList, QHash<QString, QString>, void>(QFutureInterface<Autotest::Internal::TestParseResult>, void (*&&)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList&&, QHash<QString, QString>&&) /home/nik/dev/creator/creator-ut/src/libs/utils/runextensions.h:288:5 #8 0x7fa2244d0e69 in void Utils::Internal::runAsyncImpl<Autotest::Internal::TestParseResult, void (*)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList, QHash<QString, QString> >(QFutureInterface<Autotest::Internal::TestParseResult>, void (*&&)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList&&, QHash<QString, QString>&&) /home/nik/dev/creator/creator-ut/src/libs/utils/runextensions.h:318:5 #9 0x7fa2244d09a4 in void Utils::Internal::AsyncJob<Autotest::Internal::TestParseResult, void (*)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList&, QHash<QString, QString>&>::runHelper<0ul, 1ul, 2ul>(Utils::Internal::indexSequence<0ul, 1ul, 2ul>) /home/nik/dev/creator/creator-ut/src/libs/utils/runextensions.h:395:9 #10 0x7fa2244ce53e in Utils::Internal::AsyncJob<Autotest::Internal::TestParseResult, void (*)(QFutureInterface<Autotest::Internal::TestParseResult>&, QStringList const&, QHash<QString, QString>), QStringList&, QHash<QString, QString>&>::run() /home/nik/dev/creator/creator-ut/src/libs/utils/runextensions.h:375:9 #11 0x7fa250e2189d in Utils::Internal::RunnableThread::run() /home/nik/dev/creator/creator-ut/src/libs/utils/runextensions.cpp:39:5 #12 0x7fa24e98ac88 (/home/nik/usr/qt-5.6.0-install/5.6/gcc_64/lib/libQt5Core.so.5+0xa9c88) #13 0x7fa24e37f181 in start_thread /build/eglibc-3GlaMS/eglibc-2.19/nptl/pthread_create.c:312 #14 0x7fa24d47f47c in clone /build/eglibc-3GlaMS/eglibc-2.19/misc/../sysdeps/unix/sysv/linux/x86_64/clone.S:111 AddressSanitizer can not provide additional info. SUMMARY: AddressSanitizer: SEGV /home/nik/usr/qt-5.6.0-install/5.6/gcc_64/include/QtCore/qlist.h:797 QList<CPlusPlus::Document::MacroUse>::QList(QList<CPlusPlus::Document::MacroUse> const&) Thread T796 (QThread) created by T0 here: #0 0x4b1bc0 in __interceptor_pthread_create (/home/nik/dev/creator/creator-ut_build_asan/bin/qtcreator+0x4b1bc0) #1 0x7fa24e98a277 in QThread::start(QThread::Priority) (/home/nik/usr/qt-5.6.0-install/5.6/gcc_64/lib/libQt5Core.so.5+0xa9277) ==27517==ABORTING
Attachments
For Gerrit Dashboard: QTCREATORBUG-16129 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156508,2 | AutoTest: Avoid accessing nullptr document | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |