AutoTest: Avoid accessing nullptr document

Task-number: QTCREATORBUG-16129
Change-Id: I126f278d9202c63ef731ec2f29562d73ad9eade9
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>